--- a/estilos.css
+++ b/estilos.css
@@ -11,3 +11,67 @@
     font-size: 24px;
     color: white;
 }
+#healthyclinic{
+    font-size: 32px;
+    font-family: 'Century Gothic';
+    color: white;
+}
+
+#homemedico{
+    text-align: center;
+    font-family: 'Arial';
+    font-size: 24px;
+    color: white;
+}
+
+#logo{
+    height: 80px;
+    width: 80px;
+}
+body{
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    background-image: url(/background1.png);   
+    background-size: cover;
+    background-position: 10px 62px;
+    background-repeat: no-repeat;
+}
+table{
+    font-family: Century Gothic, Arial;
+    width: 70%;
+    margin-left: 10px;
+}
+th{
+    background-color: #A7C4D2;
+    text-align: center;
+    font-size: 25px;
+    border-radius: 10px;
+    color: black;
+    justify-content: center;
+}
+td{
+    background-color: #e4e9f2;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 10px;
+    padding: 15px;
+}
+label{
+    text-align: left;
+    font-size: 16px;
+    padding: 15px;
+}
+.tablestyle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.td btn{
+    align-items: center;
+    display: flex;
+}
+.separacion{
+    margin-left: 50px;
+    padding-left: 50px;
+}
