--- a/estilos.css
+++ b/estilos.css
@@ -61,3 +61,8 @@
 	font-size: 24px;
 	color: white;
 }
+#contenedorcentrado{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
